syntax = "proto3";
package assistant;

message Request {
  string id = 1;
  string user_id = 2;
  string type = 3;
  string payload = 4;
}
message Response {
  string id = 1;
  int32 status = 2;
  string payload = 3;
}
service Assistant {
  rpc Send(Request) returns (Response);
  rpc StreamResponses(stream Request) returns (stream Response);
}

// ---- Milestone 2: Index/Query API ----
message IndexRequest {
  string id = 1;   // document id
  string text = 2; // document text
}
message IndexResponse {
  int32 status = 1;  // 0 = ok
  string message = 2; // optional info
}

message QueryRequest {
  string query = 1; // natural language
  int32 k = 2;      // top-k results
}
message Document {
  string id = 1;
  string text = 2;
  float score = 3;
}
message QueryResponse {
  repeated Document hits = 1;
}

service Indexer {
  rpc Index(IndexRequest) returns (IndexResponse);
  rpc Query(QueryRequest) returns (QueryResponse);
}

// Embeddings service
message EmbedRequest { string text = 1; }
message EmbedResponse { repeated float vector = 1; }
message BatchEmbedRequest { repeated string texts = 1; }
message BatchEmbedResponse { repeated EmbedResponse items = 1; }

service Embeddings {
  rpc Embed(EmbedRequest) returns (EmbedResponse);
  rpc BatchEmbed(BatchEmbedRequest) returns (BatchEmbedResponse);
}
